--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: git-gateway
   branch: main
 
+publish_mode: editorial_workflow
+
 media_folder: "public/assets/blog"
 public_folder: "/assets/blog"
 
